# Python-data-science-code-snippet

./: .gitignore  .pre-commit-config.yaml  README.md  create_snippet.sh  lex-rank.txt  pyproject.toml
code_snippets/cool_tools/: box_example.py  decorator_module.py  getme_forecast.sh  heart_rate.py  icecream_datetime.py  icecream_example.py  install_forked.sh  interrogate_example.py  isort_example.py  knockknock_example.py  loguru_example.py  mypy_example.py  ngrok_example.sh  notify_send.sh  notion_example.py  pydash_chunk.py  pyfiglet_example.py  pygithub_example.py  rich_console.py  rich_inspect.py  schedule_example.py  snsscrape_example.sh  strip_interactive_example.py  tqdm_set_postfix.py  yarl_example.py
code_snippets/data_science_tools/: Untitled.ipynb  add_datepart_example.py  autoscraper_example.py  causalimpact_example.ipynb  causalimpact_example.py  convert_number_to_words.py  datapane_example.py  datefinder_example.py  decompose_high_dementional_data.ipynb  difflib_example.py  distfit_example.py  docopt_example.py  dtreeviz_example.py  dvc_example.sh  extract_holidays.py  extract_various_data.py  faker_example.py  fastai_cont_cat_split.py  fastai_df_shrink.py  fetch_openml_example.py  folium_example.ipynb  gdown_example.py  geopy_example.py  getname_example.py  graphviz_example.py  kedro_example.py  maya_example.py  newspaper3k.ipynb  pandera_example.py  pipeline_gridsearchcv.py  pytest_benchmark_example.py  pytest_example.py  pytest_fixture.py  (+11 more)
sumy_examples/: README.md  edmundson.txt  lex-rank.txt  lsa.txt  luhn.txt  summarization.sh  text-rank.txt
(+139 files in other folders)
