[tool.poetry]
name = "Python_datascience_code_snippets"
version = "0.1.0"
description = "Helpful Python and data science snippets"
authors = ["khuyentran1401 <khuyentran1476@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
poetry = "shell"
sumy = "^0.8.1"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
